syntax = "proto3";
package prismatics.server;

import "gogoproto/gogo.proto";
import "prismatics/pulse_tradable_pair.proto";

option go_package = "github.com/prism-finance/prismatics/server";

message QueryPulseTradablePairsRequest {
  string denom = 1;
  // determines whether the given denom should be considered as token_in or token_out
  bool token_in = 2;
}

message QueryPulseTradablePairsResponse {
  repeated PulseTradablePair pairs = 1 [(gogoproto.nullable) = false];
}