syntax = "proto3";
package prismatics.trade;

option go_package = "github.com/prism-finance/prismatics/types/trade";

message PulseTradablePair {
  string token_in = 1;
  string token_out = 2;
  uint64 pool_id = 3;
  bool whitelisted_route = 4;
}